--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^9.120.4",
     "@react-three/fiber": "^8.17.10",
+    "gsap": "^3.12.5",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
