--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.4.0",
     "three": "^0.171.0"
   },
   "devDependencies": {
