--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0",
     "three": "^0.171.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
