--- a/data/projects.json
+++ b/data/projects.json
@@ -4,7 +4,7 @@
     "title": "Portfolio",
     "overview": "next.js를 이용해 만든 포트폴리오입니다. Three.js와 Gsap을 활용해 인터랙티브 요소를 추가했습니다.",
     "skills": ["Next.js", "Three.js", "Gsap", "TypeScript", "TailwindCSS"],
-    "path": "Portfolio",
+    "path": "https://github.com/ychae030/2024_Portfolio",
     "img": "/images/portfolio.png"
   },
   {
@@ -12,7 +12,7 @@
     "title": "CHAEWON’s BLOG",
     "overview": "next.js 를 이용해 정적 블로그를 만들었습니다. mailto와 markdown 라이브러리를 활용했습니다.",
     "skills": ["Next.js", "TypeScript", "TailwindCSS"],
-    "path": "CHAEWON-BLOG",
+    "path": "https://github.com/ychae030/next_blog",
     "img": "/images/blog.svg"
   },
   {
@@ -20,7 +20,7 @@
     "title": "하루모음",
     "overview": "할 일(Todo 리스트) 과 감정 이모티콘을 기반으로 사용자가 하루를 기록할 수 있는 다이어리 앱입니다. 할 일을 정리하고, 그날의 기분을 이모티콘으로 선택해 일기를 작성할 수 있습니다.",
     "skills": ["React", "TypeScript", "TailwindCSS", "React-Query", "Firebase"],
-    "path": "Harumoem",
+    "path": "https://github.com/ychae030/todo-diary",
     "img": "/images/todo.png"
   }
 ]
