--- a/data/projects.json
+++ b/data/projects.json
@@ -2,7 +2,7 @@
   {
     "id": 1,
     "title": "Portfolio",
-    "overview": "next.js를 이용해 만든 포트폴리오입니다. Three.js와 Gsap을 활용해 인터랙티브 요소를 추가했습니다.",
+    "overview": "Next.js, Three.js, 그리고 GSAP를 활용하여 사용자와 상호작용하는 인터랙티브 웹 경험을 구현한 포트폴리오입니다. 스크롤에 따라 움직이는 3D 오브젝트, 커스텀 마우스 커서, 그리고 ScrollTrigger를 통한 애니메이션 효과로 시각적 재미를 주었습니다.",
     "skills": ["Next.js", "Three.js", "Gsap", "TypeScript", "TailwindCSS"],
     "path": "https://github.com/ychae030/2024_Portfolio",
     "img": "/images/portfolio.png"
