--- a/data/projects.json
+++ b/data/projects.json
@@ -10,7 +10,7 @@
   {
     "id": 2,
     "title": "CHAEWON’s BLOG",
-    "overview": "next.js 를 이용해 정적 블로그를 만들었습니다. mailto와 markdown 라이브러리를 활용했습니다.",
+    "overview": "Next.js를 사용하여 정적 블로그를 구현했습니다. markdown 라이브러리를 활용해 포스트를 간단하게 작성하고 렌더링할 수 있으며, mailto 기능을 통해 블로그 방문자가 작성자와 직접적으로 소통할 수 있는 기능을 제공합니다. 정적 페이지의 특성을 살려 SEO에도 최적화되었습니다.",
     "skills": ["Next.js", "TypeScript", "TailwindCSS"],
     "path": "https://github.com/ychae030/next_blog",
     "img": "/images/blog.svg"
